--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ kramdown:
 
 
 # 地址设置
-baseurl: "/jekyll-pithy"
-url: "http://guovz.github.io"
+baseurl: ""
+url: "http://henggeneral.github.io/"
 #url: "http://127.0.0.1:4000"
 
 # 分页设置
