--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ kramdown:
 
 # 地址设置
 baseurl: ""
-url: "http://henggeneral.github.io/"
+url: "http://henry.li/"
 #url: "http://127.0.0.1:4000"
 
 # 分页设置
